# emqx-auth

./: .env  .gitignore  Makefile  README.md  compose.yml  pyproject.toml
config/: acl.conf  emqx.conf  emqx_auth_jwt.conf  emqx_auth_redis.conf  jwt_private_key.pem  jwt_public_key.pem  keygen.sh  nginx.conf  redis_acl_commands.txt
test/: .env  LOADTEST_README.md  load_test.py  locust.conf  test_mqtt_auth.py
vernemq/: .env  compose.yml  redis.lua  redis_acl_commands.txt  webhook.py
